Repository structure update